query manager added

--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ PASSWORD_RESET_TOKEN='j04Z3kBM9888rDzU7QFupn40PO1JfG/z3N2yrpCf2sE6408AdqBKQZJRF9
 CLIENT_URL='13.234.238.40:9200'
 USER_DB= "scoobydoo"
 DATABASE= "yalla_admin"
-PASSWORD_DB= "uer1234" 
+PASSWORD_DB= "user1234" 
 PORT_DB= "5432"
 HOST_DB= "lochost"
